# cpp_alg_bench

./: CMakeLists.txt  README.md  generate_csv.sh  notes.txt  plot.py  plot_plotly.py
include/: copy.h  inner_product.h  map.h  partial_sum.h  reduce.h  utils.h  zip.h
test_accuracy/copy/: CMakeLists.txt  main.cpp
test_accuracy/inner_product/: CMakeLists.txt  main.cpp
test_accuracy/map/: CMakeLists.txt  main.cpp
test_accuracy/partial_sum/: CMakeLists.txt  main.cpp
test_accuracy/reduce/: CMakeLists.txt  main.cpp
test_accuracy/zip/: CMakeLists.txt  main.cpp
test_bench/copy/: CMakeLists.txt  main.cpp
test_bench/copy/copy_nums/: CMakeLists.txt  main.cpp
test_bench/copy/copy_strings/: CMakeLists.txt  main.cpp
test_bench/inner_product/: CMakeLists.txt  main.cpp
test_bench/map/: CMakeLists.txt  main.cpp
test_bench/partial_sum/: CMakeLists.txt  main.cpp
test_bench/reduce/: CMakeLists.txt  main.cpp
test_bench/sort/: CMakeLists.txt  main.cpp
test_bench/sort_quiz/: CMakeLists.txt  main.cpp
test_bench/zip/: CMakeLists.txt  main.cpp
